[package]
name = "ethers-fireblocks"
version = "0.1.1-alpha.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
ethers-rs middleware and signer for Fireblocks' APIs
"""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-core = { version = "0.5.1"}
ethers-signers = { version = "0.5.1" }
ethers-providers = { version = "0.5.1" }

serde_json = "1.0.60"
serde = "1.0.118"
jsonwebtoken = "7.2.0"
reqwest = { version = "0.10.10", features = ["json"] }
thiserror = "1.0.22"
rustc-hex = "2.1.0"
digest = "0.9.0"
sha2 = "0.9.2"
async-trait = "0.1.42"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
once_cell = "1.5.2"
