[package]
name = "ethers-fireblocks"
version = "0.1.2-alpha.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
ethers-rs middleware and signer for Fireblocks' APIs
"""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }

serde_json = "1.0.60"
serde = "1.0.118"
jsonwebtoken = "7.2.0"
reqwest = { version = "0.11.4", default-features = false, features = ["json"] }
thiserror = "1.0.22"
rustc-hex = "2.1.0"
digest = "0.9.0"
sha2 = "0.9.2"
async-trait = "0.1.42"

[dev-dependencies]
reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.10.0", features = ["macros", "rt"] }
once_cell = "1.5.2"

[features]
openssl = ["ethers-providers/openssl", "reqwest/native-tls"]
rustls = ["ethers-providers/rustls", "reqwest/rustls-tls"]
